improved vertical alignment of sequence issue items; fixed css for auto-hovered orLists

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -270,16 +270,30 @@
     cursor: pointer;
 }
 
-.validationListItem, .course {
+.validationListItem {
+    padding: 4px 0;
+}
+
+.validationListItem, .course, .orList {
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
 
-.validationListItem:hover, .course.highlighted {
+.validationListItem:hover, .course.highlighted, .orList.highlighted {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.validationListItem > div {
+.validationListIcon, .validationMessage {
     display: inline-block;
+    vertical-align: middle;
+}
+
+.validationListIcon {
+    height: 24px;
+    width: 30px;
+}
+
+.validationMessage {
+    width: calc(100% - 30px);
 }
 
 /* Styling for SearchBox */
